removed container class from single-class.php to fix layout issues on larger display

--- a/themes/iflex-theme/src/style.css
+++ b/themes/iflex-theme/src/style.css
@@ -6,3 +6,7 @@
 @import "../css/certified-trainer.css";
 @import "../css/page-certifications.css";
 @import "../css/iflex-classes.css";
+
+p{
+    font-family: 'Montserrat', sans-serif !important;
+}
